--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BSCash - Futuro Financiero</title>
-    <link rel="stylesheet" href="style.css">  <!-- Asegúrate de que el archivo style.css esté en la misma carpeta -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -38,9 +38,7 @@
         <section id="stats" class="card">
             <h2>Estadísticas en Tiempo Real</h2>
             <h3>Capitalización de Mercado</h3>
-            <iframe src="https://poocoin.app/tokens/0x4d1fD955520A26660CDF6c6a62467509FDe9cB6d"></iframe>
-            <h3>Gráfico de Liquidez</h3>
-            <iframe src="https://dexscreener.com/bsc/0x4d1fD955520A26660CDF6c6a62467509FDe9cB6d"></iframe>
+            <iframe src="https://bscscan.com/token/0x4d1fD955520A26660CDF6c6a62467509FDe9cB6d" width="100%" height="500px"></iframe>
         </section>
         <section id="updates" class="card">
             <h2>Cambios Realizados</h2>
