--- a/aboutus.html
+++ b/aboutus.html
@@ -137,9 +137,9 @@
 
         <div class="footerlink">
             <h1 class="linkTitle">Resource</h1>
-            <a href="#" class="eachLink">Style Guide</a>
-            <a href="#" class="eachLink">Change Log</a>
-            <a href="#" class="eachLink">License</a>
+            <a href="https://github.com/RUSHE3D/BNCash-Token" class="eachLink">Github</a>
+            <a href="https://github.com/RUSHE3D/BNCash-Token/blob/main/CHANGELOG.md" class="eachLink">Change Log</a>
+            <a href="https://www.gnu.org/licenses/gpl-3.0.html" class="eachLink">License</a>
         </div>
     </div>
 
