modified:   aboutus.html 	modified:   faq.html 	new file:   img/eth-icon.png 	new file:   img/sol-icon.png 	new file:   img/world.png 	modified:   index.html 	new file:   presence.html

--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
     <title>BSCash - Financial Future</title>
     <link rel="stylesheet" href="./commonStyle.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./ico/logo-black.ico" type="image/x-icon">
+	<link rel="icon" href="./ico/logo-black.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/aa7454d09f.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -15,18 +15,20 @@
     <header>
         <div id="logo">
             <a href="./index.html">
-                <img src="./img/logo-white.png" alt="">
+            <img src="./img/logo-white.png" alt="">
             </a>
         </div>
         <ul class="nav" id="nav">
             <ul class="navLogo">
                 <a href="./index.html">
-                    <img src="./img/logo-white.png" alt="">
-                </a>
+                     <img src="./img/logo-white.png" alt="">
+               </a>
             </ul>
 
             <li class="nav-link"><a href="./index.html">Home</a></li>
             <li class="nav-link"><a href="./aboutus.html">About Us</a></li>
+            <li class="nav-link"><a href="./faq.html">FAQ</a></li>
+            <li class="nav-link"><a href="./presence.html">Presence</a></li>
             <li class="nav-link"><a href="mailto:bncash@protonmail.com">Contact</a></li>
             <li class="sociallinkContainer">
                 <img class="sociallink" src="./img/fabook-icon-white.svg" alt="">
@@ -87,7 +89,7 @@
                     <span class="faqToggle">+</span>
                 </div>
                 <div class="faqAnswer">
-                    <p>BSCash is a Binance Smart Chain (BSC)-based token designed to revolutionize decentralized finance (DeFi) by offering fast transactions, low fees, and sustainable investment opportunities.</p>
+                    <p>BSCash is a Binance Smart Chain (BSC)-based token designed to revolutionize decentralized finance (DeFi) by offering fast transactions, low fees, and sustainable investment opportunities. Originally created on the BNB network but we are expanding to other networks</p>
                 </div>
             </div>
 
@@ -99,7 +101,7 @@
                         <span class="faqToggle">+</span>
                     </div>
                     <div class="faqAnswer">
-                        <p>The official address of the contract is:
+                        <p>The official address of the contract is:(ONLY FOR BNB NETWORK)
                             <p> 0x4d1fD955520A26660CDF6c6a62467509FDe9cB6d</p>
                             <p> Always verify the address before making any transaction.</p>
                     </div>
@@ -113,7 +115,7 @@
                             <span class="faqToggle">+</span>
                         </div>
                         <div class="faqAnswer">
-                            <p>You can buy BSCash on PancakeSwap, a trusted decentralized exchange platform.
+                            <p>You can buy BSCash on PancakeSwap, Pump.fun..., a trusted decentralized exchange platform.
                                 Simply import the token using the contract address mentioned and make the purchase with BNB.</p>
                         </div>
                     </div>
@@ -152,7 +154,7 @@
                                 <!-- Q 6 -->
                                 <div class="faqItem">
                                     <div class="faqQuestion">
-                                        <h3>6. What is the total supply of BSCash?</h3>
+                                        <h3>6. What is the total supply of BSCash? (BNB Network)</h3>
                                         <span class="faqToggle">+</span>
                                     </div>
                                     <div class="faqAnswer">
