--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 
             <li class="nav-link"><a href="./index.html">Home</a></li>
             <li class="nav-link"><a href="./aboutus.html">About Us</a></li>
+            <li class="nav-link"><a href="./faq.html">FAQ</a></li>
+            <li class="nav-link"><a href="./presence.html">Presence</a></li>
             <li class="nav-link"><a href="mailto:bncash@protonmail.com">Contact</a></li>
             <li class="sociallinkContainer">
                 <img class="sociallink" src="./img/fabook-icon-white.svg" alt="">
@@ -150,9 +152,11 @@
                 <div>
                     <h1 class="marketTitle">Buying</h1>
                     <p class="darkPara">
-                        You can purchase BSCash on PancakeSwap using the following contract address: 
-0x4d1fD955520A26660CDF6c6a62467509FDe9cB6d
+                        You can purchase BSCash on PancakeSwap (BNB Network) using the following contract address: 
+0x4d1fD955520A26660CDF6c6a62467509FDe9cB6d (soon)
                     </p>
+                    <br>
+                    <p class="darkPara">You can purchase BSCash on Pump.fun (SOL Network) using the following contract address:</p>
                 </div>
             </div>
             <div class="eachMarket">
