--- a/aboutus.html
+++ b/aboutus.html
@@ -10,21 +10,25 @@
     <script src="https://kit.fontawesome.com/aa7454d09f.js" crossorigin="anonymous"></script>
 </head>
 <body>
-     <!-- Header -->
-     <header>
+
+    <!-- Header -->
+    <header>
         <div id="logo">
             <a href="./index.html">
-               <img src="./img/logo-white.png" alt="">
+            <img src="./img/logo-white.png" alt="">
             </a>
         </div>
         <ul class="nav" id="nav">
             <ul class="navLogo">
                 <a href="./index.html">
-                    <img src="./img/logo-white.png" alt="">
-                </a>
+                     <img src="./img/logo-white.png" alt="">
+               </a>
             </ul>
+
             <li class="nav-link"><a href="./index.html">Home</a></li>
             <li class="nav-link"><a href="./aboutus.html">About Us</a></li>
+            <li class="nav-link"><a href="./faq.html">FAQ</a></li>
+            <li class="nav-link"><a href="./presence.html">Presence</a></li>
             <li class="nav-link"><a href="mailto:bncash@protonmail.com">Contact</a></li>
             <li class="sociallinkContainer">
                 <img class="sociallink" src="./img/fabook-icon-white.svg" alt="">
